[package]
name = "calculator-engine"
version = "0.1.0"
authors = ["Alik Aslanyan <cplusplus@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
nom = "5.0.1"
arrayvec = "0.5.1"
snafu = "0.6.0"
derive_more = "0.99.2"
itertools = "0.8.1"
crossbeam = "0.7.3"
clone_all = "0.1.1"
log = "0.4.8"
time = "0.1.42"
cfg-if = "0.1.10"
cranelift = { version = "0.51.0", optional = true }
cranelift-module = { version = "0.51.0", optional = true }
cranelift-simplejit = { version = "0.51.0", optional = true }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0", optional = true }


[features]
llvm_jit = ["inkwell"]
cranelift_jit = ["cranelift", "cranelift-module", "cranelift-simplejit"]
default = ["cranelift_jit"]